# akflib

./: .pre-commit-config.yaml  README.md  example-with-img.iso  example.iso  pyproject.toml  test.py
agents/windows/: README.md  __init__.py  main.py  util.py
agents/windows/browser/: chromium.py  edge.py
agents/windows/os/: config.py
akf/action/agent/: __init__.py  client.py  server.py
akf/action/disk/: ntfs.py  vdi.py
akf/action/hypervisor/: base.py  vbox.py
akf/action/remote/: __init__.py  linux_ssh.py  windows_ansible.py  windows_winrm.py
akf/agents/: __init__.py
akf/agents/windows/: __init__.py  chromium.py  os.py
akf/generation/: __init__.py
examples/agent/: playwright.py  test_browsers.py
examples/agent/server/: _a.py  _b.py  base.py
examples/agent/test_typing/: test.py
examples/declarative/: translator.py
examples/declarative/actions/: sample.py
examples/declarative/core/: base.py
examples/hypervisor/: main.ipynb
examples/physical/df_vfs/: gpt_slack_1.py  gpt_slack_2.py  other.py  slack.py  slack_2.py
examples/physical/tsk/: dir_to_iso.py  list_dir.py  overwrite_section.py  pytsk_slack.py  slack_2.py  slack_3.py
playground/agent/client/: main.py
playground/agent/server/: __init__.py
playground/hypervisor/: main.ipynb
playground/physical/df_vfs/: gpt_slack_1.py  slack.py  slack_2.py
playground/physical/tsk/: dir_to_iso.py  parse_ntfs_boot_sector.py  slack_2.py
playground/renderer/: main.py
scenarios/: sample.yaml
src/akflib/actions/: sample.py
src/akflib/core/: __init__.py
src/akflib/core/agents/: __init__.py  client.py  server.py
src/akflib/core/disk/: core.py  ntfs.py  slack.py  vdi.py
src/akflib/core/hypervisor/: base.py  vbox.py
src/akflib/core/remote/: linux_ssh.py
src/akflib/declarative/: __init__.py  core.py  main.py  util.py
src/akflib/generation/: __init__.py  documents.py  emails.py
src/akflib/modules/: __init__.py  case.py  sample.py  vbox.py
src/akflib/output/: __init__.py
src/akflib/renderers/: __init__.py  prefetch.py  urlhistory.py
src/akflib/rendering/: __init__.py  core.py  main.py  objs.py
src/akflib/translation/: __init__.py  core.py  main.py  util.py
src/akflib/utility/: __init__.py  imports.py
