[project]
name = "akf"
version = "0.0.1"
description = "the automated kinetic framework"
requires-python = ">=3.11"

# TODO: if we're going to use a symmetric codebase for the agent, it would be 
# easiest to just have a distinct dependency group for each supported OS, 
# containing only the required dependencies for that platform.
dependencies = [
  "case-uco-lib",
  "pycryptodomex>=3.21.0",
  "pytest-playwright>=0.6.2",
  "rpyc>=6.0.1",
  "virtualbox>=2.1.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "flake8-bugbear>=24.12.12",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]

# [project.optional-dependencies]
# pip install template[dev]
# dev = [
#   "black",
#   "flake8",
#   "flake8-bugbear",
#   "pre-commit",
#   "pytest",
# ]
# all taken from Pydantic's pyproject.toml
# docs = [
#     "autoflake",
#     "mkdocs",
#     "mkdocs-awesome-pages-plugin",
#     "mkdocs-exclude",
#     "mkdocs-gen-files",
#     "mkdocs-glightbox",
#     "mkdocs-material[imaging]",
#     "mkdocs-redirects",
#     "mkdocstrings-python",
#     "tomli",
#     "pyupgrade",
#     "mike",
#     "requests",
# ]

#[tool.setuptools]
#packages = ["template"]

[tool.flake8]
extend_ignore = [
  "E501", # silence "line too long", i don't care lol
  "E203" # silence "whitespace before :"
]

[tool.mypy]
strict_optional = true

[tool.isort]
profile = "black"

[tool.uv.sources]
case-uco-lib = { git = "https://github.com/lgactna/CASE-pydantic" }


