[project]
name = "akflib"
version = "0.0.1"
description = "the automated kinetic framework"
requires-python = ">=3.11"

# Note that this does not include installing the VirtualBox SDK. This must be
# installed separately as described in https://github.com/sethmlarson/virtualbox-python.
# If done in a virtual environment, enable the virtual environment before navigating
# to the directory containing the SDK and running the install script.
dependencies = [
  "caselib",
  "pydantic>=2.10.6",
  "pydantic-yaml>=1.4.0",
  "rpyc>=6.0.1",
  "virtualbox>=2.1.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "flake8-bugbear>=24.12.12",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]

# [project.optional-dependencies]
# pip install template[dev]
# dev = [
#   "black",
#   "flake8",
#   "flake8-bugbear",
#   "pre-commit",
#   "pytest",
# ]
# all taken from Pydantic's pyproject.toml
# docs = [
#     "autoflake",
#     "mkdocs",
#     "mkdocs-awesome-pages-plugin",
#     "mkdocs-exclude",
#     "mkdocs-gen-files",
#     "mkdocs-glightbox",
#     "mkdocs-material[imaging]",
#     "mkdocs-redirects",
#     "mkdocstrings-python",
#     "tomli",
#     "pyupgrade",
#     "mike",
#     "requests",
# ]

#[tool.setuptools]
#packages = ["template"]

[tool.flake8]
extend_ignore = [
  "E501", # silence "line too long", i don't care lol
  "E203" # silence "whitespace before :"
]

[tool.mypy]
strict_optional = true

[tool.isort]
profile = "black"

[tool.uv.sources]
caselib = { git = "https://github.com/lgactna/CASE-pydantic.git" }


