[project]
name = "akflib"
version = "0.0.1"
description = "the automated kinetic framework"
requires-python = ">=3.11"

# Note that this does not include installing the VirtualBox SDK. This must be
# installed separately as described in https://github.com/sethmlarson/virtualbox-python.
# If done in a virtual environment, enable the virtual environment before navigating
# to the directory containing the SDK and running the install script.
dependencies = [
  "caselib",
  "click>=8.1.8",
  "dfvfs>=20240505",
  "pydantic>=2.10.6",
  "pydantic-yaml>=1.4.0",
  "rpyc>=6.0.1",
  "virtualbox>=2.1.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "flake8-bugbear>=24.12.12",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]

[project.scripts]
akf-translate = "akflib.declarative:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
extend-exclude = "playground"

[tool.flake8]
extend_ignore = [
  "E501", # silence "line too long", i don't care lol
  "E203" # silence "whitespace before :"
]
exclude = "playground/*"

[tool.mypy]
strict_optional = true
exclude = ["playground"]

[tool.isort]
profile = "black"

[tool.uv.sources]
caselib = { git = "https://github.com/lgactna/CASE-pydantic.git" }


